--- a/styles/hanukkah.css
+++ b/styles/hanukkah.css
@@ -21,8 +21,10 @@
 #flame0 { position:absolute; top:-45px; left:-7px; }
 #flameProper { position:relative; top:-10px; left:-0x; z-index: 5;}
 
-#day {position: absolute; top: 300px; left: 200px; z-index: 8; background-color: #234c8e; color: white; font-size: 1em}
-#day:hover { font-size: 1.2em; }
+#day {position: absolute; top: 270px; left: 200px; z-index: 8; background-color: #253572; color: white; font-size: 1em}
+
+#clickMsg {position: absolute; top: 300px; left: 200px; z-index: 8; background-color: #253572; color: white; font-size: 1em; font-style:italic;}
+#clickMsg:hover { font-size: 1.2em; }
 
 #raise { position:absolute; top: 20px; left: 200px; z-index: 3; width: 60px; height: 30px; background-color: white; border-radius:25%; z-index: 0;}
 #lower { position:absolute; top: 70px; left: 200px; z-index: 3; width: 60px; height: 30px; background-color: white; border-radius:25%; z-index: 0;}
