--- a/styles/hanukkah.css
+++ b/styles/hanukkah.css
@@ -20,17 +20,16 @@
 #flame0 { position:absolute; top:-45px; left:-7px; z-index:5}
 #flameProper { position:relative; top:-10px; left:-0x; z-index: 5;}
 
-#overMsg {position: absolute; top: 210px; left: 200px; z-index: -2; background-color: #253572; color: white; font-size: 1em}
+#overMsg {position: absolute; top: 210px; left: 200px; z-index: -2; background-color: #253572; color: white; font-size: 1em; display:none}
+#explain { font-style: italic}
 
-#currentDate {position: absolute; top: 240px; left: 200px; z-index: 8; background-color: #253572; color: white; font-size: 1em}
+#currentDate {position: absolute; top: 240px; left: 200px; z-index: 2; background-color: #253572; color: white; font-size: 1em}
 
 
-#day {position: absolute; top: 270px; left: 200px; z-index: 8; background-color: #253572; color: white; font-size: 1em}
+#day {position: absolute; top: 270px; left: 200px; z-index: 2; background-color: #253572; color: white; font-size: 1em}
 
-#clickMsg {position: absolute; top: 300px; left: 200px; z-index: 8; background-color: #253572; color: white; font-size: 1em; font-style:italic;}
+#clickMsg {position: absolute; top: 300px; left: 200px; z-index: 2; background-color: #253572; color: white; font-size: 1em; font-style:italic; display:none}
 #day:hover { font-style:italic}
 #currentDate:hover { font-style:italic}
 
-#clickMsg {position: absolute; top: 300px; left: 200px; z-index: 8; background-color: #253572; color: white; font-size: 1em; font-style:italic; display:none}
-
-#clickMsg2 {position: absolute; top: 300px; left: 200px; z-index: 8; background-color: #253572; color: white; font-size: 1em; font-style:italic; display:none}
+#clickMsg2 {position: absolute; top: 300px; left: 200px; z-index: 2; background-color: #253572; color: white; font-size: 1em; font-style:italic; display:none}
