--- a/styles/hanukkah.css
+++ b/styles/hanukkah.css
@@ -33,3 +33,10 @@
 #currentDate:hover { font-style:italic}
 
 #clickMsg2 {position: absolute; top: 300px; left: 200px; z-index: 2; background-color: #253572; color: white; font-size: 1em; font-style:italic; display:none}
+
+#credits {position: absolute; background-color: #253572; color: white; z-index: 2}
+#credits:hover { font-style:italic}
+
+#blame1 {position: absolute; top: 200, left: 200; border: thick solid rgba(187, 199, 238, 0.8); background-color: rgba(37, 53, 114, 0.8); color: white; z-index: 8; padding: 4px; display:none}
+
+#url {z-index: 8}
