--- a/styles/hanukkah.css
+++ b/styles/hanukkah.css
@@ -39,4 +39,6 @@
 
 #blame1 {position: absolute; top: 200, left: 200; border: thick solid rgba(187, 199, 238, 0.8); background-color: rgba(37, 53, 114, 0.8); color: white; z-index: 8; padding: 4px; display:none}
 
+#loading {position: absolute; top: 200, left: 200; border: thick solid rgba(187, 199, 238, 0.8); background-color: rgba(37, 53, 114, 0.8); color: white; z-index: 8; padding: 4px; display:block}
+
 #url {z-index: 8}
